Fix overflow with idx_hero in en locale

--- a/ckanext/data_depositario/fanstatic/less/hero.less
+++ b/ckanext/data_depositario/fanstatic/less/hero.less
@@ -26,14 +26,18 @@
   }
 }
 
-.hero-heading {
+.hero-block {
   padding: 150px 0;
 }
 
 @media (max-width: 767px) {
-  .hero-heading {
+  .hero-block {
     padding: 75px 0;
   }
+}
+
+.hero-heading {
+  width: 400px;
 }
 
 .btn-hero {
@@ -53,7 +57,6 @@
 .hero-animation-left {
   width: 132px;
   height: 169px;
-  margin-left: 120px;
   margin-top: -41px;
   background-image: url("../images/logo_ani.svg");
   background-repeat: no-repeat;
